--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
 	},
 	"dependencies": {
 		"@t3-oss/env-nextjs": "^0.10.1",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"framer-motion": "^11.3.19",
 		"geist": "^1.3.0",
+		"lucide-react": "^0.417.0",
 		"next": "^14.2.4",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"tailwind-merge": "^2.4.0",
+		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.3"
 	},
 	"devDependencies": {
@@ -30,7 +36,7 @@
 		"postcss": "^8.4.39",
 		"prettier": "^3.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.5",
-		"tailwindcss": "^3.4.3",
+		"tailwindcss": "^3.4.7",
 		"typescript": "^5.5.3"
 	},
 	"ct3aMetadata": {
