--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@t3-oss/env-nextjs": "^0.10.1",
+		"aos": "^2.3.4",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.3.19",
@@ -25,6 +26,7 @@
 		"zod": "^3.23.3"
 	},
 	"devDependencies": {
+		"@types/aos": "^3.0.7",
 		"@types/eslint": "^8.56.10",
 		"@types/node": "^20.14.10",
 		"@types/react": "^18.3.3",
