--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"geist": "^1.3.0",
 		"lucide-react": "^0.417.0",
 		"next": "^14.2.4",
+		"next-cloudinary": "^6.7.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"tailwind-merge": "^2.4.0",
