--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"postcss": "^8.4.39",
 		"prettier": "^3.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.5",
+		"schema-dts": "^1.1.2",
 		"tailwindcss": "^3.4.7",
 		"typescript": "^5.5.3"
 	},
