--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "next build",
 		"dev": "next dev",
 		"lint": "next lint",
+		"typecheck": "tsc --noEmit",
 		"start": "next start",
 		"fix": "prettier -w . && eslint . --fix"
 	},
