--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
 		"framer-motion": "^11.3.19",
 		"geist": "^1.3.0",
 		"lucide-react": "^0.417.0",
-		"next": "^14.2.4",
+		"next": "^15.3.4",
 		"next-cloudinary": "^6.7.0",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
+		"posthog-js": "^1.256.1",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.3"
