--- a/package.json
+++ b/package.json
@@ -1,51 +1,51 @@
 {
-	"name": "nashpillai.com",
-	"version": "0.1.0",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"build": "next build",
-		"dev": "next dev",
-		"lint": "next lint",
-		"typecheck": "tsc --noEmit",
-		"start": "next start",
-		"fix": "prettier -w . && eslint . --fix"
-	},
-	"dependencies": {
-		"@t3-oss/env-nextjs": "^0.10.1",
-		"aos": "^2.3.4",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.1",
-		"framer-motion": "^11.3.19",
-		"geist": "^1.3.0",
-		"lucide-react": "^0.417.0",
-		"next": "^15.3.4",
-		"next-cloudinary": "^6.7.0",
-		"posthog-js": "^1.256.1",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
-		"tailwind-merge": "^2.4.0",
-		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.23.3"
-	},
-	"devDependencies": {
-		"@types/aos": "^3.0.7",
-		"@types/eslint": "^8.56.10",
-		"@types/node": "^20.14.10",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
-		"@typescript-eslint/eslint-plugin": "^7.1.1",
-		"@typescript-eslint/parser": "^7.1.1",
-		"eslint": "^8.57.0",
-		"eslint-config-next": "^14.2.4",
-		"postcss": "^8.4.39",
-		"prettier": "^3.3.2",
-		"prettier-plugin-tailwindcss": "^0.6.5",
-		"schema-dts": "^1.1.2",
-		"tailwindcss": "^3.4.7",
-		"typescript": "^5.5.3"
-	},
-	"ct3aMetadata": {
-		"initVersion": "7.36.1"
-	}
+  "name": "nashpillai.com",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "start": "next start",
+    "fix": "prettier -w . && eslint . --fix"
+  },
+  "dependencies": {
+    "@t3-oss/env-nextjs": "^0.10.1",
+    "aos": "^2.3.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.19",
+    "geist": "^1.3.0",
+    "lucide-react": "^0.417.0",
+    "next": "15.3.8",
+    "next-cloudinary": "^6.7.0",
+    "posthog-js": "^1.256.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.3"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.7",
+    "@types/eslint": "^8.56.10",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.4",
+    "postcss": "^8.4.39",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "schema-dts": "^1.1.2",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.3"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.36.1"
+  }
 }
